--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 def mcVersion = "1.12.2"
 def modMajor = "0"
-def modMinor = "9"
-def modPatch = "1"
+def modMinor = "10"
+def modPatch = "0"
 
 version = "${mcVersion}-${modMajor}.${modMinor}.${modPatch}"
 group = "xt9.deepmoblearningbm" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -52,6 +52,9 @@ repositories {
         url = "http://dvs1.progwml6.com/files/maven"
     }
     maven {
+        url = "https://maven.blamejared.com"
+    }
+    maven {
         // location of a maven mirror for JEI files, as a fallback
         name = "ModMaven"
         url = "modmaven.k-4u.nl"
@@ -72,6 +75,7 @@ dependencies {
     // at runtime, use the full JEI jar
     runtime "mezz.jei:jei_${mcVersion}:4.10.0.201"
 
+    compile "vazkii.patchouli:Patchouli:1.0-14.68"
     compile 'cofhcore:CoFHCore-1.12.2:release:universal'
     compile 'thermal-foundation:ThermalFoundation-1.12.2:release:universal'
 
